--- a/LASCANO_IT222.html
+++ b/LASCANO_IT222.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
+<center>
 	<h1>PROFILE</h1>
 	<br>
 
@@ -14,6 +15,7 @@
 
 	<p><mark><b><i><q>Nothing good ever comes of violence, except vengeance</q></i> - Martin Luther</b></mark></p>
 
+
 	<h3>Name: </h3> 
 	<p>Malvin Jonas B. Lascano</p>
 	<h3>Age: </h3>
@@ -22,8 +24,9 @@
 	<p>Pisces</p>
 	<h3>Address: </h3>
 	<p>Quezon City</p>
+	</center>
 
-
+	<center>
 	<table style="width:30%;" border="1px tolid black;">
 	<caption style="font-size:30px;"><b>Personal Achievements</b></caption>
 	 <tr>
@@ -62,5 +65,7 @@
 	 </tr>
 
 	</table>
+	</center>
+</center>
 </body>
 </html>
